# hugo-tools

./: .gitignore  CONTRIBUTING.md  LICENSE  MANIFEST.in  Makefile  README.md  SETUP.md  pyproject.toml
.github/workflows/: ci.yml  test.yml
docs/: README.md
docs/development/: test-coverage-improvement-plan.md
src/hugotools/: __init__.py  __main__.py  cli.py  common.py  version.py
src/hugotools/commands/: __init__.py  datetime.py  import_wordpress.py  tag.py
tests/: __init__.py  test_cli.py  test_common.py  test_datetime.py  test_import_wordpress.py  test_tag.py
